# iai_office_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: office_sim.launch  office_sim_with_tortuga.launch
maps/: map-hallway.pgm  map-hallway.yaml  map.pgm  map.yaml
models/BigTable/: BigTable.dae  model.config  model.sdf
models/Chair/: Chair.dae  model.config  model.sdf
models/DoorOpen/: DoorOpen.dae  model.config  model.sdf
models/DoorTile/: DoorTile.dae  model.config  model.sdf
models/Shelves/: BigTable.dae  Shelves.dae  model.config  model.sdf
models/SmallTable/: SmallTable.dae  model.config  model.sdf
models/WallTile/: WallTile.dae  model.config  model.sdf
models/WindowTile/: WindowTile.dae  model.config  model.sdf
resource/Media/materials/scripts/: iai-office.material
worlds/: office_sim_WS15.world
